@@ -1,3 +1,11 @@
+2008-06-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* docs/reference/gobject/tmpl/gboxed.sgml:
+	* gobject/gboxed.c:
+	* gobject/gboxed.h:
+	* gobject/gvaluetypes.c:
+	  Migrating docs.
+
 2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	Bug 316221 - G_LOCK warns about breaking strict-aliasing rules
